
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/contact_name"
            android:text="@string/contact_name"
            android:layout_marginVertical="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingTop="20dp"
            android:labelFor="@+id/name"/>

        <TextView
            android:id="@+id/contact_tel"
            android:text="@string/contact_tel"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="100dp"
            android:labelFor="@+id/tel"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_zalo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="384dp"
            android:layout_marginBottom="86dp"

            android:text="@string/button_zalo"
            app:layout_constraintBottom_toTopOf="@+id/button_diary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_diary"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"
            android:text="@string/button_diary"
            app:layout_constraintBottom_toTopOf="@+id/button_store_position"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_zalo" />

        <Button
            android:id="@+id/button_store_position"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/button_store_position"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>